# rag-test

./: gui.py  pyproject.toml
ai/: gpt.py
